================================================================================
CHANGELOG
================================================================================

	0.3.8.9
	Jan 20, 2009

	* containers/Note.py: Fix in transpose function.
	(http://groups.google.com/group/mingus-python/t/60cd407eeadc0b3e)


================================================================================

	0.3.8.8
	Jan 19, 2009
	
	* midi/fluidsynth.py: Renamed default_bpm function argument to bpm.
	(http://groups.google.com/group/mingus-python/t/cb8784584330d42d)
	* containers/Note.py: Removed velocity and channel from dynamics.
	* core/progressions.py: Added substitute_harmonic.

================================================================================

	0.3.8.7
	Jan 16, 2009

	* midi/MidiTrack.py: Added support for bpm attribute in play_Bar. This 
	means that tempo changes can now be saved as well. It is advised to have 
	only one track containing tempo changes. 


================================================================================

	0.3.8.6
	Jan 16, 2009

	* midi/fluidsynth.py: play_Bar and play_Bars (and consequently all the
	other play_ functions) will now change the tempo if the bpm attribute
	on a NoteContainer is set. I also rewrote play_Bars from scratch to be able to 
	incorparate changing tempos. The method is a lot nicer now. (The younger 
	me thought it was a good idea to use datetime functions instead of 
	sleep.. -- coincidentally I probably needed a lot of sleep myself that time, 
	so I missed out twice)

================================================================================

	0.3.8.5 
	Jan 16, 2009

	* midi/fluidsynth.py: Fixed timing issue in MidiSequencer.play_Bars, so
	play_Bars, play_Tracks and play_Composition work again. All fluidsynth 
	test pass again. 

================================================================================

	0.3.8.4
	Jan 16, 2009

	* midi/fluidsynth.py: Fix in MidiSequencer.play_Track + added 